src/main/resources/static/main.css
/* ... */
.sliding-list-box .content-group .prev {
  transform: translateX(-100%);
}

.sliding-list-box .content-group .current {
  transform: translateX(0);
}

.sliding-list-box .content-group .next {
  transform: translateX(100%);
}

.sliding-list-box .content-group[data-direction="prev"] .prev.next {
  transform: translateX(100%);
}

.sliding-list-box .content-group[data-direction="next"] .prev.next {
  transform: translateX(-100%);
}

.sliding-list-box .content-group .prev.current.next {
  transform: translateX(0);
}

.sliding-list-box .content-box {
  display: flex;
  justify-content: center;
  padding: 0 5px;
}

.sliding-list-box .content-box>li {
  margin: 0 15px;
  width: 217px;
}

.sliding-list-box .content-box>li:first-child {
  margin-left: 0;
}

.sliding-list-box .content-box>li:last-child {
  margin-right: 0;
}

.sliding-list-box .thumbnail {
  border-radius: 500px;
  overflow: hidden;
}

.sliding-list-box .badge-wrapper i {
  margin: 0 1px;
}

/**
 *  기타
 */

/** ================================================
  page - main
================================================ */

#main {
  text-align: center;
  overflow: hidden;
  /* 배너 */
}

#main .sliding-list-section header {
  text-align: center;
  font-size: 11px;
}

#main .sliding-list-section .more {
  display: block;
  margin: 38px auto 0;
  padding: 16px 10px 17px;
  border: 1px solid #d7d7d7;
  font-size: 15px;
  text-align: center;
  color: #444;
}

#main .sliding-list-section .more i {
  margin-left: 0.2em;
}

#main .sliding-list-section .more:hover,
#main .sliding-list-section .more:focus {
  border-color: #b4b4b4;
  color: #000;
}

#main .banner {
  background-repeat: no-repeat;
  background-position: center center;
}

#main .banner a {
  display: block;
  margin: 0 auto;
  width: 980px;
  height: 100%;
  font-size: 0;
}

#main .banner-1 {
  background-image: url(./img/img-banner-01.jpg);
  background-color: #e6dcd2;
}

#main .banner-2 {
  background-image: url(./img/img-banner-02.jpg);
  background-color: #dad8d3;
}

#main-visual {
  position: relative;
}

#main-visual .img-box {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

#main-visual .img-box a {
  display: block;
  margin: 0 auto;
  width: 980px;
  height: 100%;
}

#main-visual .img-box .img-item {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  opacity: 0;
  z-index: 0;
  transition: opacity 0.25s ease-in, z-index 0.25s ease-in;
}

#main-visual .img-box .img-item.current {
  opacity: 1;
  z-index: 1;
  transition: opacity 0.25s ease-in, z-index 0.25s ease-in;
}

#main-visual .img-box .img-1 {
  background-image: url(./img/img-main-visual-slide_1.jpg);
}

#main-visual .img-box .img-2 {
  background-image: url(./img/img-main-visual-slide_2.jpg);
}

#main-visual .img-box .img-3 {
  background-image: url(./img/img-main-visual-slide_3.jpg);
}

#main-visual .img-box .img-4 {
  background-image: url(./img/img-main-visual-slide_4.jpg);
}

#main-visual .img-box .img-5 {
  background-image: url(./img/img-main-visual-slide_5.jpg);
}

#main-visual .direction-btn-box {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: 0 auto;
  width: 980px;
  height: 100%;
  z-index: 2;
}

#main-visual .direction-btn-box .prev {
  position: absolute;
  left: -80px;
  top: 50%;
  transform: translateY(-50%);
}

#main-visual .direction-btn-box .next {
  position: absolute;
  right: -80px;
  top: 50%;
  transform: translateY(-50%);
}

#main-visual .dot-btn-box {
  position: absolute;
  left: 50%;
  bottom: 15px;
  transform: translateX(-50%);
  z-index: 2;
}

#main-visual .dot-btn-box .dot {
  margin: 0 4px;
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  background: rgba(255, 255, 255, 0.6);
}

#main-visual .dot-btn-box .dot.on {
  background: white;
}

#page-template {
  padding: 30px;
  background: #ddd;
}

#page-template i {
  box-shadow: 0 0 10px #aaa;
}

#page-template .thumbnail-box {
  width: 250px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
}

